# tl-cli

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: tl-analyst.md
commands/: tl-balance.md  tl-brands.md  tl-channels.md  tl-deals.md  tl-reports.md  tl-sponsorships.md  tl.md
docs/: architecture.md
hooks/: hooks.json
hooks/scripts/: post-usage.sh  pre-check.sh
skills/create-report/data/: sortable_columns.json
skills/create-report/prompts/: system_prompt.txt
skills/create-report/scripts/: find_similar_channels.py  orchestrate_preview.py
skills/keyword-research/scripts/: prune_keywords.py  validate_keywords.py
skills/tl/: SKILL.md
skills/tl-data/scripts/: db.py  es_utils.py
src/tl_cli/: __init__.py  _completions.py  config.py  filters.py  main.py  self_update.py
src/tl_cli/auth/: commands.py  login.py  pkce.py  token_store.py
src/tl_cli/client/: errors.py  http.py
src/tl_cli/commands/: ask.py  balance.py  brands.py  channels.py  comments.py  deals.py  describe.py  doctor.py  matches.py  proposals.py  reports.py  setup.py  snapshots.py  sponsorships.py  uploads.py  whoami.py
src/tl_cli/output/: formatter.py
tests/: test_auth.py  test_filters.py  test_output.py
