[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tl-cli"
version = "0.4.4"
description = "ThoughtLeaders CLI — query sponsorship data, channels, brands, and intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "ThoughtLeaders", email = "dev@thoughtleaders.io"},
]
keywords = ["thoughtleaders", "sponsorship", "influencer", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "authlib>=1.3",
]

[project.scripts]
tl = "tl_cli.main:cli"

[project.urls]
Homepage = "https://thoughtleaders.io"
Repository = "https://github.com/ThoughtLeaders-io/tl-cli"
Documentation = "https://github.com/ThoughtLeaders-io/tl-cli/blob/main/docs/architecture.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tl_cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude-plugin" = "tl_cli/_plugin/.claude-plugin"
"commands" = "tl_cli/_plugin/commands"
"skills" = "tl_cli/_plugin/skills"
"agents" = "tl_cli/_plugin/agents"
"hooks" = "tl_cli/_plugin/hooks"

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
